--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,14 @@ version = "0.1.0"
 authors = ["David Bittner <bittneradave@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-lazy_static = "1.4.0"
+requests = {path = "./requests/"}
+
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8.9"
+
 log = "0.4.8"
 pretty_env_logger = "0.3.1"
 
-requests = {path = "./requests/"}
+config = { version = "0.9", features = ["yaml"] }
+lazy_static = "1.4.0"
