--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,21 @@
 port:
     8080
+
 addr:
     0.0.0.0
+
+templates:
+    'templates/*'
+
+redirects:
+    - regex: '^/a2-test/(.*)/coolcar.html$'
+      url:   '/a2-test/$1/galaxie.html'
+      code:  302
+
+    - regex: '^/a2-test/(.*)/1\.[234]/(.*)'
+      url:   /a2-test/$1/1.1/$2
+      code:  302
+
+    - regex: '^/a2-test/(.*)/mercury/(.*)$'
+      url:   '/a2-test/$1/ford/$2'
+      code:  301
