--- a/config.yml
+++ b/config.yml
@@ -8,14 +8,14 @@ templates:
     'templates/*'
 
 redirects:
-    - regex: '^/a2-test/(.*)/coolcar.html$'
-      url:   '/a2-test/$1/galaxie.html'
+    - regex: '^(.*)/coolcar.html$'
+      url:   '$1/galaxie.html'
       code:  302
 
     - regex: '^/a2-test/(.*)/1\.[234]/(.*)'
-      url:   /a2-test/$1/1.1/$2
+      url:   '/a2-test/$1/1.1/$2'
       code:  302
 
-    - regex: '^/a2-test/(.*)/mercury/(.*)$'
-      url:   '/a2-test/$1/ford/$2'
+    - regex: '^(.*)/mercury/(.*)$'
+      url:   '$1/ford/$2'
       code:  301
