--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ urlencoding = "1.0.0"
 regex = "1.3.1"
 
 tera = "*"
+async-std = "0.99.9"
+futures-preview = { version = "0.3.0-alpha.19", features = [ "async-await" ] }
