--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,10 @@ root:
 indexes:
     - index.html
 
+auth:
+    private-key:        this-is-a-key
+    file-name:          auth.yml
+
 redirects:
     - regex: '^(.*)/coolcar.html$'
       url:   '$1/galaxie.html'
