forgot to update log, and forgot to properly parse digest auth files

--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@ indexes:
 
 auth:
     private_key: this-is-a-key
-    file_name:   auth.yml
+    file_name:   "WeMustProtectThisHouse!"
 
 redirects:
     - regex: '^(.*)/coolcar.html$'
